--- a/Rapid.OSTandPSTParser.csproj
+++ b/Rapid.OSTandPSTParser.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FBA99416-B41B-422A-8362-2FFDAE668C99}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Rapid.OSTandPSTParser</RootNamespace>
+    <RootNamespace>OSTandPSTParser</RootNamespace>
     <AssemblyName>Rapid OST and PST Manager</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -56,7 +56,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Rapid.OSTandPSTParser.Program</StartupObject>
+    <StartupObject>OSTandPSTParser.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>rapid_icon_5PZ_icon.ico</ApplicationIcon>
@@ -106,6 +106,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MailItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MailItem.Designer.cs">
+      <DependentUpon>MailItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="RapidLink.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -121,8 +127,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeViewExtensions.cs" />
+    <EmbeddedResource Include="MailItem.resx">
+      <DependentUpon>MailItem.cs</DependentUpon>
+      <SubType>Designer</SubType>
+      <LastGenOutput>MailItem1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -158,6 +170,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="rapid_icon_5PZ_icon.ico" />
+    <EmbeddedResource Include="Resources\IconRapid.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
